--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="images/Chris_landscape.jpg" />
+    <title>Christopher Carroll Smith</title>
+    <meta name="description" content="Website of Christopher Carroll Smith, software architect, data storyteller, and president of Promptly Technologies, LLC." />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
